--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="box">
           <div class="col-lg-12">
             <hr>
-            <h2 class="intro-text text-center">Build a website <strong>worth visiting</strong></h2>
+            <h2 class="intro-text text-center"> Good Stuff <strong>worth visiting</strong></h2>
             <hr>
             <img class="img-responsive img-border img-left" src="img/intro-pic.jpg">
             <hr class="visible-xs">
